executable('rasterizers', ['rasterizers.cpp'],
           include_directories: agg_includes, dependencies: agg_deps,
           link_with: [libagg, libplatform],
           gui_app: true)

executable('rasterizers2', ['rasterizers2.cpp'],
           include_directories: agg_includes, dependencies: agg_deps,
           link_with: [libagg, libplatform],
           gui_app: true)

executable('lion', ['lion.cpp', 'parse_lion.cpp'],
           include_directories: agg_includes, dependencies: agg_deps,
           link_with: [libagg, libplatform],
           gui_app: true)

executable('conv_stroke', ['conv_stroke.cpp'],
           include_directories: agg_includes, dependencies: agg_deps,
           link_with: [libagg, libplatform],
           gui_app: true)

executable('mol_view', ['mol_view.cpp'],
           include_directories: agg_includes, dependencies: agg_deps,
           link_with: [libagg, libplatform],
           gui_app: true)
